--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -13,11 +13,11 @@
 <body>
     <div>
         <header class="cabecalho">
-                <img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo">
+                <img src="./assets/Logo_red.svg" alt="Logo Dow" class="logo">
             <div class="tema">
                 <a href="index.html" class="temas">Home</a>
-                <a href="sobrenos.html" class="temas">Sobre Nós</a>
-                <a href="sobreods.html" class="temas">Sobre a ODS</a>
+                <a href="#" target="_blank" class="temas">Sobre Nós</a>
+                <a href="#" class="temas">Sobre a ODS</a>
             </div>
         </header>
     </div>
@@ -26,7 +26,7 @@
                 <div class="conteudo__inicio">
                     <h1 class="titulo">Empresa sustentável</h1>
                     <h2 class="titulo__subtitulo">Número 1 no mercado de tecnologia sustetável</h2>
-                    <p class="titulo__subtitulo__texto">ext ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                    <p class="titulo__subtitulo__texto">A Dow combina química, biologia e física para criar tecnologias inovadoras que contribuem para o progresso da humanidade. Fornecendo visão e inovação para os mais diferentes mercados em todo o mundo com soluções essenciais para o progresso humano</p>
                     <div class="projetos">
                         <a class="projeto__btn" href="#" >Impactos Ambientais</a>
                         <a class="projeto__btn" href="#">Projeto de Reciclagem</a>
@@ -35,34 +35,34 @@
             </div>
             <div class="container__quemsomos">
                 <h1>Quem Somos?</h1>
-                <p>ext ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-                <a class="container__saibamais" href="">SAIBA MAIS</a>
+                <p>Ajudamos a proporcionar um futuro sustentável para o mundo por meio da nossa expertise em ciência dos materiais e da colaboração com parceiros. Saiba mais sobre nossa ambição, nossa equipe e nossas parcerias.</p>
+                <a class="container__saibamais" href="" target="_blank">SAIBA MAIS</a>
             </div>
             <div class="container__sustentabilidade">
                 <h1>SUSTENTABILIDADE</h1>
-                <img src="../../../public/assets/image/pessoas.png" alt="Imagens pessoas">
+                <img src="./assets/pessoas.png" alt="Imagens pessoas">
                 <div class="sustentabilidade">
                     <div class="sustentabilidade__info">
                         <h1>Onde ficam as máquinas</h1>
-                        <p>ext ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived ext ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived </p>
+                        <p>Descubra onde estão localizadas nossas máquinas, os horarios de funcionamento, nossos objetivos com elas, os beneficios que elas podem trazer para o meio ambiente e para quem recicla e como elas podem contribuir para um futuro mais sustentável. Clique em "Saiba mais"</p>
                     </div>
                     <div class="sustentabilidade__link">
-                        <a href="">SAIBA MAIS</a>
+                        <a href="#">SAIBA MAIS</a>
                     </div>
                 </div>
                 <div class="sustentabilidade">
                     <div class="sustentabilidade__info">
                         <h1>Sobre a ODS</h1>
-                        <p>ext ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived ext ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived </p>
+                        <p>Os Objetivos de Desenvolvimento Sustentável (ODS) são uma iniciativa global da Organização das Nações Unidas (ONU) que visa promover um futuro mais justo, equitativo e sustentável para todos. Descubra mais a respeito da ODS e como ela se aplica no nosso projeto.</p>
                     </div>
                     <div class="sustentabilidade__link">
-                        <a href="">SAIBA MAIS</a>
+                        <a href="#">SAIBA MAIS</a>
                     </div>
                 </div>
                 <div class="sustentabilidade">
                     <div class="sustentabilidade__info">
                         <h1>Custos</h1>
-                        <p>ext ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived ext ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived </p>
+                        <p>Saiba mais a respeito de quais os materiasi que aceitos por nossas máquinas e os valores pagos por cada material depositado nela. Entenda mais a respeito dos beneficios em fazer a reciclagem de forma limpa correta. Para mais informações clique em "Saiba mais".</p>
                     </div>
                     <div class="sustentabilidade__link">
                         <a href="">SAIBA MAIS</a>
@@ -75,15 +75,15 @@
         <div class="rodape__link">
             <p>Nos siga em nossas redes sociais:</p>
             <a href="https://www.linkedin.com/company/dow-chemical/">
-            <img src="../../../public/assets/image/linkedin.svg" alt="logo linkedin"></a>
+            <img src="/assets/linkedin.svg" alt="logo linkedin"></a>
             <a href="https://x.com/DowNewsroom">
-            <img src="../../../public/assets/image/twitterx.svg" alt="logo X"></a>
+            <img src="/assets/twitterx.svg" alt="logo X"></a>
             <a href="https://www.facebook.com/dow/">
-            <img src="../../../public/assets/image/facebook.svg" alt="logo Facebook"></a> 
+            <img src="/assets/facebook.svg" alt="logo Facebook"></a> 
             <a href="https://www.youtube.com/dowchemicalcompany">
-            <img src="../../../public/assets/image/youtube.svg" alt="Logo Youtube"></a> 
+            <img src="/assets/youtube.svg" alt="Logo Youtube"></a> 
             <a href="https://www.instagram.com/dow_official">
-            <img src="../../../public/assets/image/instagram.svg" alt="Logo instagram"></a>
+            <img src="/assets/instagram.svg" alt="Logo instagram"></a>
         </div>
     </footer>
 </body>
