Atualização das imagens

--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -13,7 +13,7 @@
 <body>
     <div>
         <header class="cabecalho">
-                <img src="./assets/Logo_red.svg" alt="Logo Dow" class="logo">
+                <img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo">
             <div class="tema">
                 <a href="index.html" class="temas">Home</a>
                 <a href="#" target="_blank" class="temas">Sobre Nós</a>
@@ -40,7 +40,7 @@
             </div>
             <div class="container__sustentabilidade">
                 <h1>SUSTENTABILIDADE</h1>
-                <img src="./assets/pessoas.png" alt="Imagens pessoas">
+                <img src="../../../public/assets/image/pessoas.png" alt="Imagens pessoas">
                 <div class="sustentabilidade">
                     <div class="sustentabilidade__info">
                         <h1>Onde ficam as máquinas</h1>
@@ -75,15 +75,15 @@
         <div class="rodape__link">
             <p>Nos siga em nossas redes sociais:</p>
             <a href="https://www.linkedin.com/company/dow-chemical/">
-            <img src="/assets/linkedin.svg" alt="logo linkedin"></a>
+            <img src="../../../public/assets/image/linkedin.svg" alt="logo linkedin"></a>
             <a href="https://x.com/DowNewsroom">
-            <img src="/assets/twitterx.svg" alt="logo X"></a>
+            <img src="../../../public/assets/image/twitterx.svg" alt="logo X"></a>
             <a href="https://www.facebook.com/dow/">
-            <img src="/assets/facebook.svg" alt="logo Facebook"></a> 
+            <img src="../../../public/assets/image/facebook.svg" alt="logo Facebook"></a> 
             <a href="https://www.youtube.com/dowchemicalcompany">
-            <img src="/assets/youtube.svg" alt="Logo Youtube"></a> 
+            <img src="../../../public/assets/image/youtube.svg" alt="Logo Youtube"></a> 
             <a href="https://www.instagram.com/dow_official">
-            <img src="/assets/instagram.svg" alt="Logo instagram"></a>
+            <img src="../../../public/assets/image/instagram.svg" alt="Logo instagram"></a>
         </div>
     </footer>
 </body>
