Alteração dos footers

--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -65,7 +65,7 @@
                         <p>Saiba mais a respeito de quais os materiasi que aceitos por nossas máquinas e os valores pagos por cada material depositado nela. Entenda mais a respeito dos beneficios em fazer a reciclagem de forma limpa correta. Para mais informações clique em "Saiba mais".</p>
                     </div>
                     <div class="sustentabilidade__link">
-                        <a href="">SAIBA MAIS</a>
+                        <a href="../../../src/paginas/valores/index.html">SAIBA MAIS</a>
                     </div>
                 </div>
             </div>
