--- a/site/src/paginas/valores/index.html
+++ b/site/src/paginas/valores/index.html
@@ -57,27 +57,22 @@
             <h4>R$ 0,10</h4>
         </div>
     </section>
-    <footer class="footer">
-        <div class="footer-container">
-          <div class="footer-logo">
-            <img src="../../../public/assets/image/logo.png" alt="Logo" />
-            <p>EcoValor</p>
-          </div>
-          
-          <div class="footer-links">
-            <a href="#">Sobre</a>
-            <a href="#">Contato</a>
-            <a href="#">Termos</a>
-          </div>
-      
-          <div class="footer-social">
-            <a href="#"><img src="facebook-icon.svg" alt="Facebook"></a>
-            <a href="#"><img src="instagram-icon.svg" alt="Instagram"></a>
-            <a href="#"><img src="whatsapp-icon.svg" alt="WhatsApp"></a>
-          </div>
-        </div>
-        <p class="footer-copy">© 2025 EcoValor. Todos os direitos reservados.</p>
-      </footer>
+    <footer class="rodape">
+      <p>Desenvolvido e projetado por Kaio</p>
+      <div class="rodape__link">
+          <p>Nos siga em nossas redes sociais:</p>
+          <a href="https://www.linkedin.com/company/dow-chemical/">
+          <img src="../../../public/assets/image/linkedin.svg" alt="logo linkedin"></a>
+          <a href="https://x.com/DowNewsroom">
+          <img src="../../../public/assets/image/twitterx.svg" alt="logo X"></a>
+          <a href="https://www.facebook.com/dow/">
+          <img src="../../../public/assets/image/facebook.svg" alt="logo Facebook"></a> 
+          <a href="https://www.youtube.com/dowchemicalcompany">
+          <img src="../../../public/assets/image/youtube.svg" alt="Logo Youtube"></a> 
+          <a href="https://www.instagram.com/dow_official">
+          <img src="../../../public/assets/image/instagram.svg" alt="Logo instagram"></a>
+      </div>
+  </footer>
 
 </body>
 </html>
