--- a/site/src/paginas/valores/index.html
+++ b/site/src/paginas/valores/index.html
@@ -9,9 +9,16 @@
     <title>Valores</title>
 </head>
 <body>
-    <header class="cabecalho">
-
-    </header>
+    <div>
+        <header class="cabecalho">
+                <img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo">
+            <div class="tema">
+                <a href="index.html" class="temas">Home</a>
+                <a href="#" target="_blank" class="temas">Sobre Nós</a>
+                <a href="#" class="temas">Sobre a ODS</a>
+            </div>
+        </header>
+    </div>
     <div class="banner">
         <h1 class="txt-banner">
             <span>V</span><span>o</span><span>c</span><span>ê</span>
