--- a/site/src/paginas/valores/index.html
+++ b/site/src/paginas/valores/index.html
@@ -13,7 +13,7 @@
         <header class="cabecalho">
                 <img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo">
             <div class="tema">
-                <a href="index.html" class="temas">Home</a>
+                <a href="../../../src/paginas/home/index.html" class="temas">Home</a>
                 <a href="#" target="_blank" class="temas">Sobre Nós</a>
                 <a href="#" class="temas">Sobre a ODS</a>
             </div>
