atualização link ods

--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -17,7 +17,7 @@
             <div class="tema">
                 <a href="index.html" class="temas">Home</a>
                 <a href="#" target="_blank" class="temas">Sobre Nós</a>
-                <a href="#" class="temas">Sobre a ODS</a>
+                <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
             </div>
         </header>
     </div>
@@ -56,7 +56,7 @@
                         <p>Os Objetivos de Desenvolvimento Sustentável (ODS) são uma iniciativa global da Organização das Nações Unidas (ONU) que visa promover um futuro mais justo, equitativo e sustentável para todos. Descubra mais a respeito da ODS e como ela se aplica no nosso projeto.</p>
                     </div>
                     <div class="sustentabilidade__link">
-                        <a href="#">SAIBA MAIS</a>
+                        <a href="../../../src/paginas/ODS/index.html">SAIBA MAIS</a>
                     </div>
                 </div>
                 <div class="sustentabilidade">
