--- a/site/src/paginas/sobreProjeto/index.html
+++ b/site/src/paginas/sobreProjeto/index.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta html-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reciclagem</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div>
+        <header class="cabecalho">
+                <img src="./assets/Logo_red.svg" alt="Logo Dow" class="logo">
+            <div class="tema">
+                <a href="index.html" class="temas">Home</a>
+                <a href="SobreNos.html" class="temas">Sobre Nós</a>
+                <a href="SobreODS.html" class="temas">Sobre a ODS</a>
+            </div>
+        </header>
+    </div>
+<body>
+    <div class="reciclagem">
+        <div class="imagem-reciclagem">
+            <img src="assets/reciclagem.svg">
+        </div>
+        <h1 class="reciclagem__titulo">Do Lixo ao Luxo :<strong class="titulo-destaque">Poder da Reciclagem!</strong></h1>
+        <p class="reciclagem-texto">O projeto Reciclar para Transformar tem como principal objetivo promover a sustentabilidade ambiental e social por meio de um sistema de reciclagem incentivada, acessível e inclusivo. Inspirado pela ODS 12 – Consumo e Produção Responsáveis, o projeto visa conscientizar a população sobre a importância da destinação correta dos resíduos, oferecendo uma forma prática, recompensadora e educativa de colaborar com o meio ambiente..</p>
+        <p class="reciclagem-texto">A proposta consiste na criação de pontos de coleta estratégicos e acessíveis, onde os cidadãos poderão entregar garrafas plásticas PET e latas de alumínio em troca de recompensas financeiras proporcionais à quantidade entregue. Esses resíduos serão posteriormente encaminhados para cooperativas de catadores ou empresas de reciclagem, garantindo sua reutilização adequada e incentivando a economia circular.</p>
+        <p class="reciclagem-texto">Além disso, ao transformar o descarte consciente em oportunidade, o projeto estimula o engajamento da comunidade, promove a educação ambiental e oferece uma alternativa de geração de renda, especialmente para pessoas em situação de vulnerabilidade social.</p>
+        <p class="reciclagem-texto">Os valores estimados para a recompensa financeira por unidade entregue são:</p>
+        <div class="reciclagem__pontos">
+            <ul>
+                <li>Garrafa PET (350 ml): R$ 0,10</li>
+                <li>Garrafa PET (500 ml): R$ 0,20</li>
+                <li>Lata de alumínio (350 ml): R$ 0,10</li>
+                <li>Lata de alumínio (500 ml): R$ 0,20</li>
+            </ul>
+        </div>
+        <p class="reciclagem-texto">  O processo será simples, acessível e transparente. Cada participante poderá se cadastrar por meio de um sistema digital, que fará o registro das entregas, controle de pontuação e pagamento via PIX ou cartão social. O sistema também gerará relatórios de impacto ambiental com base nos resíduos entregues, promovendo confiança, rastreabilidade e controle.</p>
+        <p class="reciclagem-texto">Para facilitar a adesão e ampliar o alcance do projeto, os pontos de coleta serão instalados em espaços públicos estratégicos, como praças, escolas, centros comunitários e terminais de transporte. Também está previsto o desenvolvimento de um aplicativo móvel, que permitirá acompanhar entregas, consultar saldos, trocar pontos por recompensas e até participar de desafios e campanhas educativas — gamificando o processo de reciclagem</p>
+        <p class="reciclagem-texto">A longo prazo, espera-se a formação de uma comunidade mais responsável e participativa, com hábitos sustentáveis incorporados ao dia a dia. O projeto também visa reduzir significativamente o volume de resíduos descartados de forma inadequada, contribuindo diretamente para a preservação do meio ambiente e a melhoria da qualidade de vida urbana.</p>
+        <div class="subtitulo__reciclagem">
+            <h2>Entre os benefícios esperados estão: </h2>
+            <div class="reciclagem__pontos">
+                <ul>
+                    <li>Diminuição da poluição em rios, ruas e áreas públicas;</li>
+                    <li>Estímulo à consciência ambiental em diversas faixas etárias;</li>
+                    <li>Inclusão social por meio da valorização do trabalho com reciclagem;</li>
+                    <li>Redução da demanda por matérias-primas virgens, preservando recursos naturais;</li>
+                    <li>Engajamento de empresas e instituições públicas como parceiras do projeto;</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="reciclagem-fim">
+        <div class="reciclagem-fim__texto">
+            <p>A longo prazo, espera-se a formação de uma comunidade mais responsável, com hábitos sustentáveis incorporados à rotina. Os benefícios são: redução significativa de resíduos descartados de forma inadequada além do impacto direto na preservação do meio ambiente</p>
+        <img src="assets/pessoas.png">
+    </div>
+    </div>
+
+
+    <footer class="rodape">
+        <p>Desenvolvido e projetado por Ayck Martins dos Santos Souza</p>
+        <div class="rodape__link">
+            <p>Nos siga em nossas redes sociais:</p>
+            <a href="https://www.linkedin.com/company/dow-chemical/">
+            <img src="/assets/linkedin.svg" alt="logo linkedin"></a>
+            <a href="https://x.com/DowNewsroom">
+            <img src="/assets/twitterx.svg" alt="logo X"></a>
+            <a href="https://www.facebook.com/dow/">
+            <img src="/assets/facebook.svg" alt="logo Facebook"></a> 
+            <a href="https://www.youtube.com/dowchemicalcompany">
+            <img src="/assets/youtube.svg" alt="Logo Youtube"></a> 
+            <a href="https://www.instagram.com/dow_official">
+            <img src="/assets/instagram.svg" alt="Logo instagram"></a>
+        </div>
+    </footer>
 </body>
 </html>
