--- a/site/src/paginas/sobreProjeto/index.html
+++ b/site/src/paginas/sobreProjeto/index.html
@@ -13,18 +13,18 @@
 <body>
     <div>
         <header class="cabecalho">
-                <img src="./assets/Logo_red.svg" alt="Logo Dow" class="logo">
+                <img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo">
             <div class="tema">
-                <a href="index.html" class="temas">Home</a>
-                <a href="SobreNos.html" class="temas">Sobre Nós</a>
-                <a href="SobreODS.html" class="temas">Sobre a ODS</a>
+                <a href="../../paginas/home/index.html" class="temas">Home</a>
+                <a href="#" class="temas">Sobre Nós</a>
+                <a href="../../paginas/ODS/index.html" class="temas">Sobre a ODS</a>
             </div>
         </header>
     </div>
 <body>
     <div class="reciclagem">
         <div class="imagem-reciclagem">
-            <img src="assets/reciclagem.svg">
+            <img src="../../../public/assets/image/reciclagem.svg">
         </div>
         <h1 class="reciclagem__titulo">Do Lixo ao Luxo :<strong class="titulo-destaque">Poder da Reciclagem!</strong></h1>
         <p class="reciclagem-texto">O projeto Reciclar para Transformar tem como principal objetivo promover a sustentabilidade ambiental e social por meio de um sistema de reciclagem incentivada, acessível e inclusivo. Inspirado pela ODS 12 – Consumo e Produção Responsáveis, o projeto visa conscientizar a população sobre a importância da destinação correta dos resíduos, oferecendo uma forma prática, recompensadora e educativa de colaborar com o meio ambiente..</p>
@@ -58,7 +58,7 @@
     <div class="reciclagem-fim">
         <div class="reciclagem-fim__texto">
             <p>A longo prazo, espera-se a formação de uma comunidade mais responsável, com hábitos sustentáveis incorporados à rotina. Os benefícios são: redução significativa de resíduos descartados de forma inadequada além do impacto direto na preservação do meio ambiente</p>
-        <img src="assets/pessoas.png">
+        <img src="../../../public/assets/image/pessoas.png">
     </div>
     </div>
 
@@ -68,15 +68,15 @@
         <div class="rodape__link">
             <p>Nos siga em nossas redes sociais:</p>
             <a href="https://www.linkedin.com/company/dow-chemical/">
-            <img src="/assets/linkedin.svg" alt="logo linkedin"></a>
+            <img src="../../../public/assets/image/linkedin.svg" alt="logo linkedin"></a>
             <a href="https://x.com/DowNewsroom">
-            <img src="/assets/twitterx.svg" alt="logo X"></a>
+            <img src="../../../public/assets/image/twitterx.svg" alt="logo X"></a>
             <a href="https://www.facebook.com/dow/">
-            <img src="/assets/facebook.svg" alt="logo Facebook"></a> 
+            <img src="../../../public/assets/image/facebook.svg" alt="logo Facebook"></a> 
             <a href="https://www.youtube.com/dowchemicalcompany">
-            <img src="/assets/youtube.svg" alt="Logo Youtube"></a> 
+            <img src="../../../public/assets/image/youtube.svg" alt="Logo Youtube"></a> 
             <a href="https://www.instagram.com/dow_official">
-            <img src="/assets/instagram.svg" alt="Logo instagram"></a>
+            <img src="../../../public/assets/image/instagram.svg" alt="Logo instagram"></a>
         </div>
     </footer>
 </body>
