--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <title>Localização das Maquinas</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a class="logo" href="#">Dow</a>
-            <ul class="nav-list">
-                <li><a href="#">nome</a></li>
-                <li><a href="#">nome</a></li>
-                <li><a href="#">nome</a></li>
-                <li><a href="#">nome</a></li>
-                <li><a href="#">nome</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div>
+        <header class="cabecalho">
+            <img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo">
+            <div class="tema">
+                <a href="../../../src/paginas/home/index.html" class="temas">Home</a>
+                <a href="#" target="_blank" class="temas">Sobre Nós</a>
+                <a href="#" class="temas">Sobre a ODS</a>
+                <a href="#" class="temas">Localização das Maquinas</a>
+            </div>
+        </header>
+    </div>
 
     <main>
         <h1 class="titulo">Localização das Maquinas</h1>
@@ -34,8 +38,21 @@
         </div>
     </main>
 
-    <footer>
-
+    <footer class="rodape">
+        <p>Desenvolvido e projetado por Bruno Fernande Silva</p>
+        <div class="rodape__link">
+            <p>Nos siga em nossas redes sociais:</p>
+            <a href="https://www.linkedin.com/company/dow-chemical/">
+                <img src="../../../public/assets/image/linkedin.svg" alt="logo linkedin"></a>
+            <a href="https://x.com/DowNewsroom">
+                <img src="../../../public/assets/image/twitterx.svg" alt="logo X"></a>
+            <a href="https://www.facebook.com/dow/">
+                <img src="../../../public/assets/image/facebook.svg" alt="logo Facebook"></a>
+            <a href="https://www.youtube.com/dowchemicalcompany">
+                <img src="../../../public/assets/image/youtube.svg" alt="Logo Youtube"></a>
+            <a href="https://www.instagram.com/dow_official">
+                <img src="../../../public/assets/image/instagram.svg" alt="Logo instagram"></a>
+        </div>
     </footer>
 </body>
 
