--- a/site/src/paginas/sobreProjeto/index.html
+++ b/site/src/paginas/sobreProjeto/index.html
@@ -5,7 +5,7 @@
     <meta html-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reciclagem</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../../src/paginas/sobreProjeto/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
             </div>
         </header>
     </div>
-<body>
+
     <div class="reciclagem">
         <div class="imagem-reciclagem">
             <img src="../../../public/assets/image/reciclagem.svg">
@@ -81,3 +81,4 @@
     </footer>
 </body>
 </html>
+
