atualização link onde ficam as maquinas

--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -47,7 +47,7 @@
                         <p>Descubra onde estão localizadas nossas máquinas, os horarios de funcionamento, nossos objetivos com elas, os beneficios que elas podem trazer para o meio ambiente e para quem recicla e como elas podem contribuir para um futuro mais sustentável. Clique em "Saiba mais"</p>
                     </div>
                     <div class="sustentabilidade__link">
-                        <a href="#">SAIBA MAIS</a>
+                        <a href="../localizacaoMaquinas/index.html">SAIBA MAIS</a>
                     </div>
                 </div>
                 <div class="sustentabilidade">
