--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -30,12 +30,45 @@
     <main>
         <h1 class="titulo">Localização das Maquinas</h1>
 
+        <p class="texto">Nossas máquinas de reciclagem estão espalhadas por diversos pontos da cidade para facilitar o
+            seu acesso.
+            Com apenas alguns cliques, você pode encontrar a unidade mais próxima e começar a transformar seus resíduos
+            em atitude sustentável.</p>
+
         <div class="mapBox">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.8762298251704!2d-46.72270402538633!3d-23.644603164654317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce51104c1b022d%3A0x42aeff0c0ff98d26!2sCentro%20Universit%C3%A1rio%20Cat%C3%B3lico%20%C3%8Dtalo%20Brasileiro!5e0!3m2!1spt-BR!2sbr!4v1745006034544!5m2!1spt-BR!2sbr"
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+
+        <div class="localizaçao">
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur provident facilis nobis
+                quaerat autem ad
+                corrupti molestiae quod impedit explicabo praesentiu esse.</p>
+            <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut facilis vero laboriosam?
+                Ipsum, repudiandae
+                praesentium minima iure dolorum soluta. Id quos optio, corrupti laborum numquam nam? Molestias voluptas
+                nulla accusamus.</p>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus soluta, assumenda
+                architecto
+                molestiae impedit aliquid, sint hic earum excepturi nesciunt ullam sed molestias dolor fuga labore
+                ratione, cupiditate atque?</p>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus soluta, assumenda
+                architecto
+                molestiae impedit aliquid, sint hic earum excepturi nesciunt ullam sed molestias dolor fuga labore
+                ratione, cupiditate atque?</p>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus soluta, assumenda
+                architecto
+                molestiae impedit aliquid, sint hic earum excepturi nesciunt ullam sed molestias dolor fuga labore
+                ratione, cupiditate atque?</p>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus soluta, assumenda
+                architecto
+                molestiae impedit aliquid, sint hic earum excepturi nesciunt ullam sed molestias dolor fuga labore
+                ratione, cupiditate atque?</p>
+        </div>
+
+
     </main>
 
     <footer class="rodape">
