--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -68,6 +68,46 @@
                 ratione, cupiditate atque?</p>
         </div>
 
+        <section>
+            <h2>🕒 Horários de funcionamento</h2>
+            <p class="texto">As máquinas estão disponíveis todos os dias, das <strong>6h às 22h</strong>, para que você
+                possa reciclar no momento mais conveniente. É simples, rápido e seguro!.</p>
+        </section>
+
+        <section>
+            <h2>🎯 Nossos objetivos</h2>
+            <p class="texto">Nosso principal propósito é incentivar a <strong>reciclagem inteligente</strong> por meio
+                da tecnologia.
+                Queremos transformar hábitos, promover a educação ambiental e envolver toda a sociedade em práticas
+                sustentáveis.</p>
+        </section>
+
+        <section>
+            <h2>🌱 Benefícios para o meio ambiente</h2>
+            <ul>
+                <li class="texto">Redução do lixo em aterros sanitários</li>
+                <li class="texto">Menor emissão de poluentes</li>
+                <li class="texto">Preservação de recursos naturais</li>
+                <li class="texto">Estímulo à economia circular</li>
+            </ul>
+        </section>
+
+
+        <h2>Contribuindo para um futuro sustentável</h2>
+        <p class="texto">Cada embalagem reciclada contribui para um amanhã mais verde. Junte-se a nós nessa missão!<br>
+
+            As máquinas não apenas facilitam o processo de reciclagem, mas também coletam dados que ajudam a traçar
+            perfis de consumo e a planejar políticas públicas ambientais mais eficazes. Ao participar, você incentiva
+            práticas de responsabilidade social, reduz sua pegada ecológica e ainda ajuda a criar um ciclo positivo de
+            reaproveitamento de materiais.<br><br>
+
+            Com o esforço coletivo, podemos preservar ecossistemas, combater a crise climática e garantir
+            qualidade de
+            vida para as futuras gerações. <strong>é mais do que um ato: é um compromisso com o presente e com o futuro
+                do nosso planeta.</strong>
+        </p>
+
+
 
     </main>
 
