--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -82,7 +82,7 @@
                 sustentáveis.</p>
         </section>
 
-        <section>
+        <section class="beneficios">
             <h2>🌱 Benefícios para o meio ambiente</h2>
             <ul>
                 <li class="texto">Redução do lixo em aterros sanitários</li>
@@ -93,7 +93,7 @@
         </section>
 
 
-        <h2>Contribuindo para um futuro sustentável</h2>
+        <h2 class="contribuindo">Contribuindo para um futuro sustentável</h2>
         <p class="texto">Cada embalagem reciclada contribui para um amanhã mais verde. Junte-se a nós nessa missão!<br>
 
             As máquinas não apenas facilitam o processo de reciclagem, mas também coletam dados que ajudam a traçar
