--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -17,7 +17,7 @@
             <div class="tema">
                 <a href="index.html" class="temas">Home</a>
                 <a href="#" target="_blank" class="temas">Sobre Nós</a>
-                <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
+                <a href="../../../src/paginas/ODS/index.html" class="temas">SobrE a ODS</a>
             </div>
         </header>
     </div>
