--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -13,11 +13,11 @@
 <body>
     <div>
         <header class="cabecalho">
-                <img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo">
+                <img src="../../../public/assets/image/Logo_red.svg" href="../../paginas/home/index.html" alt="Logo Dow" class="logo">
             <div class="tema">
                 <a href="index.html" class="temas">Home</a>
                 <a href="#" target="_blank" class="temas">Sobre Nós</a>
-                <a href="../../../src/paginas/ODS/index.html" class="temas">SobrE a ODS</a>
+                <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
             </div>
         </header>
     </div>
