Atuaização link imagem

--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -17,7 +17,7 @@
 <body>
     <div>
         <header class="cabecalho">
-            <img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo">
+            <a href="../../paginas/home/index.html"><img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo"></a>
             <div class="tema">
                 <a href="../../../src/paginas/home/index.html" class="temas">Home</a>
                 <a href="#" target="_blank" class="temas">Sobre Nós</a>
