--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -13,7 +13,7 @@
 <body>
     <div>
         <header class="cabecalho">
-                <img src="../../../public/assets/image/Logo_red.svg" href="../../paginas/home/index.html" alt="Logo Dow" class="logo">
+                <a href="../../paginas/home/index.html"><img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo"></a>
             <div class="tema">
                 <a href="index.html" class="temas">Home</a>
                 <a href="#" target="_blank" class="temas">Sobre Nós</a>
