--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -17,17 +17,15 @@
 <body>
     <div>
         <header class="cabecalho">
-            <img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo"></a>
-            =======
-            <a href="../../paginas/home/index.html"><img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow"
-                    class="logo"></a>
-            >>>>>>> c25dbd450ea19cd6fa82183e16d29347464b5ebc
-            <div class="tema">
-                <a href="../../../src/paginas/home/index.html" class="temas">Home</a>
-                <a href="#" target="_blank" class="temas">Sobre Nós</a>
-                <a href="#" class="temas">Sobre a ODS</a>
-            </div>
-        </header>
+            <header class="cabecalho">
+                <a href="../../paginas/home/index.html"><img src="../../../public/assets/image/Logo_red.svg"
+                        alt="Logo Dow" class="logo"></a>
+                <div class="tema">
+                    <a href="index.html" class="temas">Home</a>
+                    <a href="#" target="_blank" class="temas">Sobre Nós</a>
+                    <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
+                </div>
+            </header>
     </div>
 
     <main>
