--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -17,15 +17,14 @@
 <body>
     <div>
         <header class="cabecalho">
-            <header class="cabecalho">
-                <a href="../../paginas/home/index.html"><img src="../../../public/assets/image/Logo_red.svg"
-                        alt="Logo Dow" class="logo"></a>
-                <div class="tema">
-                    <a href="index.html" class="temas">Home</a>
-                    <a href="#" target="_blank" class="temas">Sobre Nós</a>
-                    <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
-                </div>
-            </header>
+            <a href="../../paginas/home/index.html"><img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow"
+                    class="logo"></a>
+            <div class="tema">
+                <a href="index.html" class="temas">Home</a>
+                <a href="#" target="_blank" class="temas">Sobre Nós</a>
+                <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
+            </div>
+        </header>
     </div>
 
     <main>
