--- a/site/src/paginas/valores/index.html
+++ b/site/src/paginas/valores/index.html
@@ -65,19 +65,23 @@
         </div>
     </section>
     <footer class="rodape">
-      <p>Desenvolvido e projetado por Kaio</p>
+        <div class="org-txt">
+            <p>&copy; 2025 Dow Brasil. Todos os direitos reservados.</p>
+        </div>
       <div class="rodape__link">
           <p>Nos siga em nossas redes sociais:</p>
-          <a href="https://www.linkedin.com/company/dow-chemical/">
-          <img src="../../../public/assets/image/linkedin.svg" alt="logo linkedin"></a>
-          <a href="https://x.com/DowNewsroom">
-          <img src="../../../public/assets/image/twitterx.svg" alt="logo X"></a>
-          <a href="https://www.facebook.com/dow/">
-          <img src="../../../public/assets/image/facebook.svg" alt="logo Facebook"></a> 
-          <a href="https://www.youtube.com/dowchemicalcompany">
-          <img src="../../../public/assets/image/youtube.svg" alt="Logo Youtube"></a> 
-          <a href="https://www.instagram.com/dow_official">
-          <img src="../../../public/assets/image/instagram.svg" alt="Logo instagram"></a>
+          <div class="org-link">
+              <a href="https://www.linkedin.com/company/dow-chemical/">
+              <img src="../../../public/assets/image/linkedin.svg" alt="logo linkedin"></a>
+              <a href="https://x.com/DowNewsroom">
+              <img src="../../../public/assets/image/twitterx.svg" alt="logo X"></a>
+              <a href="https://www.facebook.com/dow/">
+              <img src="../../../public/assets/image/facebook.svg" alt="logo Facebook"></a> 
+              <a href="https://www.youtube.com/dowchemicalcompany">
+              <img src="../../../public/assets/image/youtube.svg" alt="Logo Youtube"></a> 
+              <a href="https://www.instagram.com/dow_official">
+              <img src="../../../public/assets/image/instagram.svg" alt="Logo instagram"></a>
+          </div>  
       </div>
   </footer>
 
