--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -69,13 +69,13 @@
         </div>
 
         <section>
-            <h2>🕒 Horários de funcionamento</h2>
+            <h2 class="titulosSection">🕒 Horários de funcionamento</h2>
             <p class="texto">As máquinas estão disponíveis todos os dias, das <strong>6h às 22h</strong>, para que você
                 possa reciclar no momento mais conveniente. É simples, rápido e seguro!.</p>
         </section>
 
         <section>
-            <h2>🎯 Nossos objetivos</h2>
+            <h2 class="titulosSection">🎯 Nossos objetivos</h2>
             <p class="texto">Nosso principal propósito é incentivar a <strong>reciclagem inteligente</strong> por meio
                 da tecnologia.
                 Queremos transformar hábitos, promover a educação ambiental e envolver toda a sociedade em práticas
@@ -83,7 +83,7 @@
         </section>
 
         <section class="beneficios">
-            <h2>🌱 Benefícios para o meio ambiente</h2>
+            <h2 class="titulosSection">🌱 Benefícios para o meio ambiente</h2>
             <ul>
                 <li class="texto">Redução do lixo em aterros sanitários</li>
                 <li class="texto">Menor emissão de poluentes</li>
@@ -94,7 +94,8 @@
 
 
         <h2 class="contribuindo">Contribuindo para um futuro sustentável</h2>
-        <p class="texto">Cada embalagem reciclada contribui para um amanhã mais verde. Junte-se a nós nessa missão!<br>
+        <p class="textoFinal">Cada embalagem reciclada contribui para um amanhã mais verde. Junte-se a nós nessa
+            missão!<br>
 
             As máquinas não apenas facilitam o processo de reciclagem, mas também coletam dados que ajudam a traçar
             perfis de consumo e a planejar políticas públicas ambientais mais eficazes. Ao participar, você incentiva
